--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>azim hvac</title>
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
@@ -22,7 +22,7 @@
 
     <header class="header">
 
-        <a href="#" class="logo"> <i class="fas fa-gear"></i>sky hvac </a>
+        <a href="#" class="logo"> <i class="fas fa-gear"></i>azim hvac </a>
 
         <nav class="navbar">
 
